# litegate

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
client/: .env.sample  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/[id]/: page.tsx
ltcpayment/: .gitignore  Cargo.toml
ltcpayment/src/: db.rs  lib.rs  routes.rs  sweeper.rs  utils.rs
node/: .env.sample  app.js  db.js  electrum.js  package.json  sweeper.js  utils.js
node/routes/: payments.js
src/: db.rs  electrum.rs  lib.rs  main.rs  routes.rs  sweeper.rs  utils.rs  webhook.rs
