[package]
name = "ltcpayment"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

bitcoin = "0.28"
secp256k1 = { version = "0.24", features = ["rand"] }
electrum-client = "0.19"

sha2 = "0.10"
ripemd = "0.1"
rand = "0.8"
hex = "0.4"
bech32 = "0.9"
aes-gcm = "0.10"
aead = "0.5"
lazy_static = "1.4"
once_cell = "1"
anyhow = "1"
log = "0.4.27"
env_logger = "0.11.8"
